data/derived/comb/progs/unify/prog3336.ml.out
Characters 73-74:
  if x' = x then x else fixpoint f x';;
                                 ^
Error: This expression has type ('a -> 'b) -> 'a -> 'b
       but an expression was expected of type
         (('a -> 'b) -> 'a -> 'b) * ('a -> 'b)
